# piRfidReader

./: .gitignore  CMakeLists.txt  Debounce.cpp  Debounce.h  PCD_Command.h  PICC_Command.h  README.md  Register.h  read_rfid.cpp  repeattimer.h  requester.cpp  rfid.cpp  rfid.h  rfidinterface.cpp  rfidinterface.h  spi.cpp  spi.h  spi_rfid.cpp  stickentry.cpp  stickentry.h  table.cpp  table.h  testSequence.cpp
